<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/riders"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_riders"

        android:scaleType="fitCenter"
        android:src="@drawable/ic_login_riders"
        app:layout_constraintBottom_toTopOf="@+id/textView2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="#101010"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/riders"
        app:lineHeight="35sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/second_slogan"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:paddingHorizontal="24dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"

        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"

        style="@style/TextButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="48dp"
        android:text="@string/have_account"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>